--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -22,7 +22,25 @@ allow bind_v2
 pidfile		/var/run/openldap/slapd.pid
 #argsfile	/var/run/openldap/slapd.args
 
+# Site-specific schema and ACL includes. These are either third-party or custom.
+include /etc/openldap/schema/kerberos.schema
+
+# Limit SASL options to only GSSAPI and not other client-favorites. Apparently there is an issue where
+# clients will default to non-working SASL mechanisms and will make you angry.
+#sasl-secprops noanonymous,noplain,noactive
+
+# SASL connection information. The realm should be your Kerberos realm as configured for the system. The
+# host should be the LEGITIMATE hostname of this server
+sasl-realm EDT.ORG
+sasl-host kserver.edt.org
+
+# SSL certificate file paths
+TLSCertificateFile /etc/pki/tls/certs/slapd.pem
+TLSCertificateKeyFile /etc/pki/tls/private/slapd.pem
+TLSCACertificateFile /etc/pki/tls/cert.pem
+
 # -----------------------------------------------
+
 database bdb
 suffix "dc=edt,dc=org"
 rootdn "cn=Manager,dc=edt,dc=org"
