--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -35,7 +35,7 @@ sasl-realm EDT.ORG
 sasl-host kserver.edt.org
 
 # SSL certificate file paths
-TLSCertificateFile /etc/pki/tls/certs/slapd.pem
+TLSCertificateFile /etc/pki/tls/certs/slapd.pemn
 TLSCertificateKeyFile /etc/pki/tls/private/slapd.pem
 TLSCACertificateFile /etc/pki/tls/cert.pem
 
