--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -34,6 +34,14 @@ sasl-secprops noanonymous,noplain,noactive
 sasl-realm EDT.ORG
 sasl-host kserver.edt.org
 
+# Rewrite certain SASL bind DNs to more readable ones. Otherwise you bind as some crazy default
+# that ends up in a different base than your actual one. This uses regex to rewrite that weird
+# DN and make it become one that you can put within your suffix.
+authz-policy from
+authz-regexp "^cn=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
+authz-regexp "^cn=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
+authz-regexp "^cn=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
+
 # SSL certificate file paths
 TLSCertificateFile /etc/pki/tls/certs/slapd.pemn
 TLSCertificateKeyFile /etc/pki/tls/private/slapd.pem
