--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -1,8 +1,8 @@
 # OpenLDAP client configuration file. Used for host default settings
 BASE            dc=edt,dc=org
-URI             ldaps://172.18.0.2
+URI             ldaps://ldap.edt.org
 SASL_MECH GSSAPI
 SASL_REALM EDT.ORG
-
-#TLS_CACERT      /etc/pki/tls/cert.pem
-#TLS_REQCERT     demand
+TLS_CACERT      /etc/openldap/certs/
+TLS_REQCERT     demand
+SASL_NOCANON on
