--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -43,10 +43,11 @@ authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,
 authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
 
 # SSL certificate file paths
-TLSCertificateFile /etc/pki/tls/certs/slapd.pemn
-TLSCertificateKeyFile /etc/pki/tls/private/slapd.pem
-TLSCACertificateFile /etc/pki/tls/cert.pem
-
+TLSCertificateFile /etc/openldap/certs/ca.crt
+TLSCertificateKeyFile /etc/openldap/certs/server.crt
+TLSCACertificateFile /etc/openldap/certs/server.key
+TLSVerifyClient	never
+TLSCipherSuite	HIGH:MEDIUM:LOW:+SSLv2
 # -----------------------------------------------
 
 database bdb
