--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -32,7 +32,7 @@ include /etc/openldap/schema/kerberos.schema
 # SASL connection information. The realm should be your Kerberos realm as configured for the system. The
 # host should be the LEGITIMATE hostname of this server
 sasl-realm EDT.ORG
-sasl-host ldap.edt.org
+sasl-host kserver.edt.org
 
 # Rewrite certain SASL bind DNs to more readable ones. Otherwise you bind as some crazy default
 # that ends up in a different base than your actual one. This uses regex to rewrite that weird
