--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -1,8 +1,8 @@
 # OpenLDAP client configuration file. Used for host default settings
 BASE            dc=edt,dc=org
-URI             ldaps://ldap.edt.org
-SASL_MECH GSSAPI
-SASL_REALM EDT.ORG
-TLS_CACERT      /etc/openldap/certs/
-TLS_REQCERT     demand
+URI             ldaps://172.18.0.2
+#SASL_MECH GSSAPI
+#SASL_REALM EDT.ORG
+TLS_CACERT      /etc/openldap/certs/ca.crt
+TLS_REQCERT     never
 SASL_NOCANON on
