--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -43,11 +43,12 @@ pidfile		/var/run/openldap/slapd.pid
 #authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
 
 # SSL certificate file paths
-TLSCertificateFile /etc/openldap/certs/ca.crt
-TLSCertificateKeyFile /etc/openldap/certs/server.crt
+TLSCertificateFile /etc/openldap/certs/ca_server.pem
+TLSCertificateKeyFile /etc/openldap/certs/ldap_server.key
 TLSCACertificateFile /etc/openldap/certs/server.key
-TLSVerifyClient	never
-TLSCipherSuite	HIGH:MEDIUM:LOW:+SSLv2
+#TLSVerifyClient	never
+#TLSCipherSuite	HIGH:MEDIUM:LOW:+SSLv2
+
 # -----------------------------------------------
 
 database bdb
