--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -3,6 +3,6 @@ BASE            dc=edt,dc=org
 URI             ldaps://172.18.0.2
 #SASL_MECH GSSAPI
 #SASL_REALM EDT.ORG
-TLS_CACERT      /etc/openldap/certs/ca.crt
-TLS_REQCERT     never
-SASL_NOCANON on
+TLS_CACERT      /etc/openldap/certs/ca_server.pem
+#TLS_REQCERT     never
+#SASL_NOCANON on
