--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -17,7 +17,7 @@ include		/etc/openldap/schema/ppolicy.schema
 include		/etc/openldap/schema/collective.schema
 
 # Allow LDAPv2 client connections.  This is NOT the default.
-allow bind_v2
+#allow bind_v2
 
 pidfile		/var/run/openldap/slapd.pid
 #argsfile	/var/run/openldap/slapd.args
@@ -46,8 +46,8 @@ pidfile		/var/run/openldap/slapd.pid
 TLSCertificateFile /etc/openldap/certs/ca_server.pem
 TLSCertificateKeyFile /etc/openldap/certs/ldap_server.key
 TLSCACertificateFile /etc/openldap/certs/server.key
-#TLSVerifyClient	never
-#TLSCipherSuite	HIGH:MEDIUM:LOW:+SSLv2
+TLSVerifyClient	never
+TLSCipherSuite	HIGH:+SSLv3:+TLSv1:MEDIUM:+SSLv2:@STRENGTH:+SHA:+MD5:!NULL
 
 # -----------------------------------------------
 
