--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -4,5 +4,5 @@ URI             ldaps://172.18.0.2
 #SASL_MECH GSSAPI
 #SASL_REALM EDT.ORG
 TLS_CACERT      /etc/openldap/certs/ca_server.pem
-#TLS_REQCERT     never
+TLS_REQCERT     never
 #SASL_NOCANON on
