--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -17,7 +17,7 @@ include		/etc/openldap/schema/ppolicy.schema
 include		/etc/openldap/schema/collective.schema
 
 # Allow LDAPv2 client connections.  This is NOT the default.
-#allow bind_v2
+allow bind_v2
 
 pidfile		/var/run/openldap/slapd.pid
 #argsfile	/var/run/openldap/slapd.args
