--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -3,6 +3,7 @@ BASE            dc=edt,dc=org
 URI             ldaps://172.18.0.2
 #SASL_MECH GSSAPI
 #SASL_REALM EDT.ORG
-TLS_CACERT      /etc/openldap/certs/ca_server.pem
+#TLS_CACERT      /etc/openldap/certs/ca_server.pem
+TLS_CACERTDIR    /etc/openldap/certs/
 TLS_REQCERT     never
 #SASL_NOCANON on
