--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -43,11 +43,16 @@ pidfile		/var/run/openldap/slapd.pid
 #authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
 
 # SSL certificate file paths
-TLSCertificateFile /etc/openldap/certs/ca_server.pem
-TLSCertificateKeyFile /etc/openldap/certs/ldap_server.key
-TLSCACertificateFile /etc/openldap/certs/server.key
-TLSVerifyClient	never
-TLSCipherSuite	HIGH:+SSLv3:+TLSv1:MEDIUM:+SSLv2:@STRENGTH:+SHA:+MD5:!NULL
+#TLSCertificateFile /etc/openldap/certs/ca_server.pem
+#TLSCertificateKeyFile /etc/openldap/certs/ldap_server.key
+#TLSCACertificateFile /etc/openldap/certs/server.key
+#TLSVerifyClient	never
+#TLSCipherSuite	HIGH:+SSLv3:+TLSv1:MEDIUM:+SSLv2:@STRENGTH:+SHA:+MD5:!NULL
+
+TLSCACertificateFile /etc/openldap/certs/ldapserver-cacerts.pem
+TLSCertificateFile /etc/openldap/certs/ldapserver-cert.pem
+TLSCertificateKeyFile /etc/openldap/certs/ldapserver-key.pem
+TLSCipherSuite HIGH:MEDIUM:+SSLv2
 
 # -----------------------------------------------
 
