--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -1,9 +1,9 @@
 # OpenLDAP client configuration file. Used for host default settings
 BASE            dc=edt,dc=org
 URI             ldaps://172.18.0.2
-#SASL_MECH GSSAPI
-#SASL_REALM EDT.ORG
+SASL_MECH GSSAPI
+SASL_REALM EDT.ORG
 #TLS_CACERT      /etc/openldap/certs/ca_server.pem
 TLS_CACERTDIR    /etc/openldap/certs/
 TLS_REQCERT     never
-#SASL_NOCANON on
+SASL_NOCANON on
