--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -23,32 +23,26 @@ pidfile		/var/run/openldap/slapd.pid
 #argsfile	/var/run/openldap/slapd.args
 
 # Site-specific schema and ACL includes. These are either third-party or custom.
-#include /etc/openldap/schema/kerberos.schema
+include /etc/openldap/schema/kerberos.schema
 
 # Limit SASL options to only GSSAPI and not other client-favorites. Apparently there is an issue where
 # clients will default to non-working SASL mechanisms and will make you angry.
-#sasl-secprops noanonymous,noplain,noactive
+sasl-secprops noanonymous,noplain,noactive
 
 # SASL connection information. The realm should be your Kerberos realm as configured for the system. The
 # host should be the LEGITIMATE hostname of this server
-#sasl-realm EDT.ORG
-#sasl-host kserver.edt.org
+sasl-realm EDT.ORG
+sasl-host kserver.edt.org
 
 # Rewrite certain SASL bind DNs to more readable ones. Otherwise you bind as some crazy default
 # that ends up in a different base than your actual one. This uses regex to rewrite that weird
 # DN and make it become one that you can put within your suffix.
-#authz-policy from
-#authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
-#authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
-#authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
+authz-policy from
+authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
+authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
+authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
 
 # SSL certificate file paths
-#TLSCertificateFile /etc/openldap/certs/ca_server.pem
-#TLSCertificateKeyFile /etc/openldap/certs/ldap_server.key
-#TLSCACertificateFile /etc/openldap/certs/server.key
-#TLSVerifyClient	never
-#TLSCipherSuite	HIGH:+SSLv3:+TLSv1:MEDIUM:+SSLv2:@STRENGTH:+SHA:+MD5:!NULL
-
 TLSCACertificateFile /etc/openldap/certs/ldapserver-cacerts.pem
 TLSCertificateFile /etc/openldap/certs/ldapserver-cert.pem
 TLSCertificateKeyFile /etc/openldap/certs/ldapserver-key.pem
