--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -50,15 +50,27 @@ TLSCipherSuite HIGH:MEDIUM:+SSLv2
 
 # -----------------------------------------------
 
+modulepath  /usr/lib64/openldap
+modulepath  /usr/local/libexec/openldap 
+moduleload  syncprov.la 
+moduleload  back_ldap.la
+loglevel    sync stats
+
+
+# -----------------------------------------------
+
 database bdb
 suffix "dc=edt,dc=org"
 rootdn "cn=Manager,dc=edt,dc=org"
 rootpw {SSHA}5DfZc1WXeIwrP7C3fr23WLZiPZ5YHMgA
 directory /var/lib/ldap
 index objectClass eq,pres
+overlay syncprov 
+syncprov-checkpoint 1000 60
+
 access to * 
-   by self write 
-   by * read
+  by dn.exact="cn=replication,dc=edt,dc=org" read
+  by * read
 # ------------------------------------------------
 	
 # enable monitoring
