--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -32,7 +32,7 @@ sasl-secprops noanonymous,noplain,noactive
 # SASL connection information. The realm should be your Kerberos realm as configured for the system. The
 # host should be the LEGITIMATE hostname of this server
 sasl-realm EDT.ORG
-sasl-host kserver.edt.org
+sasl-host ldap.edt.org
 
 # Rewrite certain SASL bind DNs to more readable ones. Otherwise you bind as some crazy default
 # that ends up in a different base than your actual one. This uses regex to rewrite that weird
@@ -41,7 +41,9 @@ authz-policy from
 authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
 authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
 authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
-
+#sasl-regexp
+#  uid=(.*),cn=gssapi,cn=auth
+#  ldap:///ou=usuaris,dc=edt,dc=org??sub?(&(cn=$1)(objectClass=inetOrgPerson))
 # SSL certificate file paths
 TLSCACertificateFile /etc/openldap/certs/ldapserver-cacerts.pem
 TLSCertificateFile /etc/openldap/certs/ldapserver-cert.pem
