--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -62,15 +62,20 @@ loglevel    sync stats
 database bdb
 suffix "dc=edt,dc=org"
 rootdn "cn=Manager,dc=edt,dc=org"
-rootpw {SSHA}5DfZc1WXeIwrP7C3fr23WLZiPZ5YHMgA
+rootpw {SASL}admin/admin@EDT.ORG
 directory /var/lib/ldap
 index objectClass eq,pres
 overlay syncprov 
 syncprov-checkpoint 1000 60
 
+access to attrs=userPassword
+  by anonymous auth
+  by self write
+  
 access to * 
+  by peername.ip=172.18.0.0%255.255.0.0 read
   by dn.exact="cn=replication,dc=edt,dc=org" read
-  by * read
+  by * read break
 # ------------------------------------------------
 	
 # enable monitoring
