--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -1,6 +1,6 @@
 # OpenLDAP client configuration file. Used for host default settings
 BASE            dc=edt,dc=org
-URI             ldaps://172.18.0.2
+URI             ldap://ldap.edt.org/
 SASL_MECH GSSAPI
 SASL_REALM EDT.ORG
 #TLS_CACERT      /etc/openldap/certs/ca_server.pem
