--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -41,13 +41,11 @@ authz-policy from
 authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
 authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
 authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
-#sasl-regexp
-#  uid=(.*),cn=gssapi,cn=auth
-#  ldap:///ou=usuaris,dc=edt,dc=org??sub?(&(cn=$1)(objectClass=inetOrgPerson))
+# ------------------------------------------------------------------------------------------------------------
 # SSL certificate file paths
-TLSCACertificateFile /etc/openldap/certs/ldapserver-cacerts.pem
-TLSCertificateFile /etc/openldap/certs/ldapserver-cert.pem
-TLSCertificateKeyFile /etc/openldap/certs/ldapserver-key.pem
+TLSCACertificateFile /etc/ssl/certs/cacert.pem
+TLSCertificateFile /etc/openldap/certs/ldapcert.pem
+TLSCertificateKeyFile /etc/openldap/certs/ldapserver.pem
 TLSCipherSuite HIGH:MEDIUM:+SSLv2
 
 # -----------------------------------------------
