--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -3,7 +3,7 @@ BASE            dc=edt,dc=org
 URI             ldap://ldap.edt.org/
 SASL_MECH GSSAPI
 SASL_REALM EDT.ORG
-#TLS_CACERT      /etc/openldap/certs/ca_server.pem
-TLS_CACERTDIR    /etc/openldap/certs/
-TLS_REQCERT     never
+TLS_CACERT      /etc/ssl/certs/cacert.pem
+#TLS_CACERTDIR    /etc/openldap/certs/
+TLS_REQCERT     allow
 SASL_NOCANON on
