--- a/files/slapd-edt.org.acl.conf
+++ b/files/slapd-edt.org.acl.conf
@@ -67,6 +67,7 @@ overlay syncprov
 syncprov-checkpoint 1000 60
 
 access to attrs=userPassword
+  by dn.exact="cn=replication,dc=edt,dc=org" read
   by anonymous auth
   by self write
   
