--- a/files/supervisord.ini
+++ b/files/supervisord.ini
@@ -6,6 +6,12 @@ command=/usr/sbin/nginx -g "daemon off;"
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/nginx.log
 
+[program:nslcd]
+command=/usr/sbin/nslcd -d
+redirect_stderr=true
+stdout_logfile=/var/log/supervisor/nslcd.log
+
+
 [inet_http_server]
 port = *:9001
 
