--- a/files/supervisord.ini
+++ b/files/supervisord.ini
@@ -1,27 +1,47 @@
 [supervisord]
 nodaemon=false
 
-[program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
-redirect_stderr=true
-stdout_logfile=/var/log/supervisor/nginx.log
+[unix_http_server]
+file=/var/run/supervisor.sock   ; (the path to the socket file)
+chmod=0700                       ; sockef file mode (default 0700)
 
-[program:nslcd]
-command=/usr/sbin/nslcd -d
-redirect_stderr=true
-stdout_logfile=/var/log/supervisor/nslcd.log
+[supervisord]
+logfile=/var/log/supervisor/supervisord.log ; (main log file;default $CWD/supervisord.log)
+pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
+childlogdir=/var/log/supervisor            ; ('AUTO' child log dir, default $TEMP)
 
+; the below section must remain in the config file for RPC
+; (supervisorctl/web interface) to work, additional interfaces may be
+; added by defining them in separate rpcinterface: sections
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
+[supervisorctl]
+serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
+
+[program:Nslcd]
+command=/usr/sbin/nslcd
+redirect_stderr=true
+stdout_logfile=/var/log/supervisor/nsld.log
 
 [inet_http_server]
 port = *:9001
 
+[program:agent]
+user=zabbix
+command = /usr/sbin/zabbix_agentd -c /etc/zabbix/zabbix_agentd.conf -f
+startsecs = 3
+redirect_stderr=true
+stderr_logfile=/var/log/supervisor/agent.log
+
 [program:slapd]
 priority=20
 directory=/tmp
-command=/sbin/slapd -u ldap -h "ldap:/// " -d 1
+command=/sbin/slapd -h "ldap:/// ldapi:/// " -d 1
 user=root
 autostart=true
 autorestart=false
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/slapd.log
 stderr_logfile=/var/log/supervisor/slapd.log
+
