--- a/files/slapd.external.conf
+++ b/files/slapd.external.conf
@@ -78,9 +78,9 @@ access to *
 # ------------------------------------------------
 
 # enable monitoring
-#database monitor
+database monitor
 # allow only rootdn to read the monitor
-#access to *
-#       by dn.exact="cn=Manager,dc=edt,dc=org" read
-#       by * none
+access to *
+       by dn.exact="cn=Monitoring,dc=edt,dc=org" read
+       by * none
 
