--- a/files/supervisord.ini
+++ b/files/supervisord.ini
@@ -19,13 +19,13 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 
+[inet_http_server]
+port = *:9001
+
 [program:Nslcd]
 command=/usr/sbin/nslcd
 redirect_stderr=true
 stdout_logfile=/var/log/supervisor/nsld.log
-
-[inet_http_server]
-port = *:9001
 
 [program:agent]
 user=zabbix
@@ -33,6 +33,13 @@ command = /usr/sbin/zabbix_agentd -c /etc/zabbix/zabbix_agentd.conf -f
 startsecs = 3
 redirect_stderr=true
 stderr_logfile=/var/log/supervisor/agent.log
+
+[program:crond]
+user=root
+command = crond -x proc
+redirect_stderr=true
+stderr_logfile=/var/log/supervisor/crond.log
+stdout_logfile=/var/log/supervisor/crond.log
 
 [program:slapd]
 priority=20
