--- a/files/slapd.external.conf
+++ b/files/slapd.external.conf
@@ -64,17 +64,19 @@ suffix "dc=edt,dc=org"
 rootdn "cn=Manager,dc=edt,dc=org"
 rootpw {SASL}admin/admin@EDT.ORG
 directory /var/lib/ldap
-index objectClass eq,pres
+index objectClass,cn,memberUid,gidNumber,uidNumber,uid eq,pres
 overlay syncprov
 syncprov-checkpoint 1000 60
 
 access to attrs=userPassword
-  by anonymous auth
   by self write
+  by anonymous auth
+  by * none
 
 access to *
   by peername.ip=172.18.0.0%255.255.0.0 read
   by * read break
+  
 # ------------------------------------------------
 
 # enable monitoring
