--- a/files/supervisord.ini
+++ b/files/supervisord.ini
@@ -23,9 +23,10 @@ serverurl=unix:///var/run/supervisor/supervisor.sock ; use a unix:// URL  for a 
 port = *:9001
 
 [program:Nslcd]
-command=/usr/sbin/nslcd
+command=/usr/sbin/nslcd -d
 redirect_stderr=true
-stdout_logfile=/var/log/supervisor/nsld.log
+stdout_logfile=/var/log/supervisor/nslcd.log
+stderr_logfile=/var/log/supervisor/nslcd.log
 
 [program:agent]
 user=zabbix
@@ -33,6 +34,7 @@ command = /usr/sbin/zabbix_agentd -c /etc/zabbix/zabbix_agentd.conf -f
 startsecs = 3
 redirect_stderr=true
 stderr_logfile=/var/log/supervisor/agent.log
+stdout_logfile=/var/log/supervisor/agent.log
 
 [program:crond]
 user=root
