--- a/files/zabbix_agentd.conf
+++ b/files/zabbix_agentd.conf
@@ -318,7 +318,7 @@ AllowRoot=1
 #
 # Mandatory: yes, if TLS certificate or PSK parameters are defined (even for 'unencrypted' connection)
 # Default:
-# TLSConnect=unencrypted
+TLSConnect=psk
 
 ### Option: TLSAccept
 #	What incoming connections to accept.
@@ -329,7 +329,7 @@ AllowRoot=1
 #
 # Mandatory: yes, if TLS certificate or PSK parameters are defined (even for 'unencrypted' connection)
 # Default:
-# TLSAccept=unencrypted
+TLSAccept=psk
 
 ### Option: TLSCAFile
 #	Full pathname of a file containing the top-level CA(s) certificates for
@@ -379,11 +379,11 @@ AllowRoot=1
 #
 # Mandatory: no
 # Default:
-# TLSPSKIdentity=
+TLSPSKIdentity=PSK 001
 
 ### Option: TLSPSKFile
 #	Full pathname of a file containing the pre-shared key.
 #
 # Mandatory: no
 # Default:
-# TLSPSKFile=
+TLSPSKFile=/etc/zabbix/zabbix_agentd.psk
