--- a/files/supervisord.ini
+++ b/files/supervisord.ini
@@ -1,5 +1,5 @@
 [supervisord]
-nodaemon=false
+nodaemon=true
 
 [unix_http_server]
 file=/var/run/supervisor/supervisor.sock   ; (the path to the socket file)
