--- a/files/slapd.external.conf
+++ b/files/slapd.external.conf
@@ -22,9 +22,6 @@ allow bind_v2
 pidfile         /var/run/openldap/slapd.pid
 #argsfile       /var/run/openldap/slapd.args
 
-# Site-specific schema and ACL includes. These are either third-party or custom.
-include /etc/openldap/schema/kerberos.schema
-
 # Limit SASL options to only GSSAPI and not other client-favorites. Apparently there is an issue where
 # clients will default to non-working SASL mechanisms and will make you angry.
 #sasl-secprops noanonymous,noplain,noactive
@@ -41,7 +38,8 @@ authz-policy from
 authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
 authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
 authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
-authz-regexp "^email=([^,]+),cn=([^,]+).*" "cn=$2,ou=usuaris,dc=edt,dc=org"
+
+#authz-regexp "^email=([^,]+),cn=([^,]+).*" "cn=$2,ou=usuaris,dc=edt,dc=org"
 
 # ------------------------------------------------------------------------------------------------------------
 # SSL certificate file paths
@@ -49,7 +47,7 @@ TLSCACertificateFile /etc/ssl/certs/cacert.pem
 TLSCertificateFile /etc/openldap/certs/ldapcert.pem
 TLSCertificateKeyFile /etc/openldap/certs/ldapserver.pem
 TLSCipherSuite HIGH:MEDIUM:+SSLv2
-TLSVerifyClient try
+TLSVerifyClient allow
 # -----------------------------------------------
 
 modulepath  /usr/lib64/openldap
