--- a/files/nslcd.conf
+++ b/files/nslcd.conf
@@ -59,8 +59,8 @@ base   group  ou=grups,dc=edt,dc=org
 #idle_timelimit 3600
 
 # Use StartTLS without verifying the server certificate.
-#ssl start_tls
-#tls_reqcert never
+ssl start_tls
+tls_reqcert never
 
 # CA certificates for server certificate verification
 #tls_cacertdir /etc/ssl/certs
