--- a/files/slapd.external.conf
+++ b/files/slapd.external.conf
@@ -24,7 +24,7 @@ pidfile         /var/run/openldap/slapd.pid
 
 # Limit SASL options to only GSSAPI and not other client-favorites. Apparently there is an issue where
 # clients will default to non-working SASL mechanisms and will make you angry.
-#sasl-secprops noanonymous,noplain,noactive
+sasl-secprops noanonymous,noplain,noactive
 
 # SASL connection information. The realm should be your Kerberos realm as configured for the system. The
 # host should be the LEGITIMATE hostname of this server
