Update and rename slapd.external.conf to slapd.conf

--- a/files/slapd.conf
+++ b/files/slapd.conf
@@ -36,11 +36,7 @@ sasl-host ldap.edt.org
 # DN and make it become one that you can put within your suffix.
 authz-policy from
 authz-regexp "^uid=[^,/]+/admin,cn=edt\.org,cn=gssapi,cn=auth" "cn=Manager,dc=edt,dc=org"
-authz-regexp "^uid=host/([^,]+)\.edt\.org,cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=hosts,dc=edt,dc=org"
 authz-regexp "^uid=([^,]+),cn=edt\.org,cn=gssapi,cn=auth" "cn=$1,ou=usuaris,dc=edt,dc=org"
-
-#authz-regexp "^email=([^,]+),cn=([^,]+).*" "cn=$2,ou=usuaris,dc=edt,dc=org"
-
 # ------------------------------------------------------------------------------------------------------------
 # SSL certificate file paths
 TLSCACertificateFile /etc/ssl/certs/cacert.pem
@@ -50,21 +46,12 @@ TLSCipherSuite HIGH:MEDIUM:+SSLv2
 TLSVerifyClient allow
 # -----------------------------------------------
 
-modulepath  /usr/lib64/openldap
-moduleload  syncprov.la
-loglevel    sync stats
-
-
-# -----------------------------------------------
-
-database bdb
+database hdb
 suffix "dc=edt,dc=org"
 rootdn "cn=Manager,dc=edt,dc=org"
 rootpw {SASL}admin/admin@EDT.ORG
 directory /var/lib/ldap
 index objectClass,cn,memberUid,gidNumber,uidNumber,uid eq,pres
-overlay syncprov
-syncprov-checkpoint 1000 60
 
 access to attrs=userPassword
   by self write
